--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
@@ -4,7 +4,7 @@
     <div class="ui segment">
       <div class="ui grid">
         <div class="sixteen wide column">
-          <label>รายละเอียดแบบสอบทาน (เดิม)</label>
+          <label>รายละเอียดแบบสอบถาม (เดิม)</label>
           <div class="dataTables_scroll">
             <div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
               <div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 100%; padding-right: 0px;">
@@ -64,7 +64,7 @@
 
         <div class="inline fields">
           <div class="ten wide field">
-            <label>รายละเอียดแบบสอบทาน (ใหม่)</label>
+            <label>รายละเอียดแบบสอบถาม (ใหม่)</label>
           </div>
         </div>
 
@@ -116,7 +116,7 @@
     <div class="ui segment">
       <div class="ui centered grid">
         <div class="sixteen wide column">
-          <label>รายละเอียดแบบสอบทาน (ใหม่)</label>
+          <label>รายละเอียดแบบสอบถาม (ใหม่)</label>
           <div class="dataTables_scroll">
             <div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
               <div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 100%; padding-right: 0px;">
