--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3.component.html
@@ -2,7 +2,7 @@
 <div class="ui modal show transition hidden" style="height: calc(6em + 15px);">
     <i class="close icon"></i>
     <div class="header">
-        ด้านแบบสอบทานระบบการควบคุมภายใน
+        ด้านแบบสอบถามระบบการควบคุมภายใน
     </div>
     <div class="ui form content">
         <div class="inline fields">
@@ -42,7 +42,7 @@
         <div class="ui attached segment">
             <div class="ui grid">
                 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-                    <span>จัดการข้อมูลแบบสอบทานระบบการควบคุมภายใน</span>
+                    <span>จัดการข้อมูลแบบสอบถามระบบการควบคุมภายใน</span>
                 </div>
 
                 <div class="centered fifteen wide column ">
@@ -64,7 +64,7 @@
                             <tr>
                                 <th rowspan="2"><input id="checkAll" type="checkbox" (click)="clickCheckAll($event)" /></th>
                                 <th rowspan="2" style="text-align: center !important">ที่</th>
-                                <th rowspan="2" style="text-align: center !important">ด้านแบบสอบทานระบบการควบคุมภายใน</th>
+                                <th rowspan="2" style="text-align: center !important">ด้านแบบสอบถามระบบการควบคุมภายใน</th>
                                 <th rowspan="1" colspan="2" style="text-align: center !important">จัดการ</th>
                             </tr>
                             <tr style="display:none">
