--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-2/int02-m4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-2/int02-m4-2.component.html
@@ -1,7 +1,7 @@
 <div class="ui grid" style="margin: 2%">
     <div class="sixteen wide column segments">
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>สรุปผลแบบสอบทานระบบการควบคุมภายใน</span>
+            <span>สรุปผลแบบสอบถามระบบการควบคุมภายใน</span>
         </div>
 
         <div class="ui attached segment">
@@ -13,7 +13,7 @@
                                 &nbsp;
                             </div>
                             <div class="six wide field">
-                                <label class="custom-label-w-20">จำนวนหน่วยงานที่ตอบกลับแบบสอบทาน :</label>
+                                <label class="custom-label-w-20">จำนวนหน่วยงานที่ตอบกลับแบบสอบถาม :</label>
                             </div>
                             <div class="four wide field">
                                 <label class="custom-label-w-20" style="text-align: left;">{{ calcTotal() }}</label>
