--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -732,7 +732,7 @@
             <div class="inline fields">
               <div class="two wide field "></div>
               <div class="three wide field ">
-                <label>แบบสอบทานระบบการควบคุมภายใน</label>
+                <label>แบบสอบถามระบบการควบคุมภายใน</label>
               </div>
               <div class="one wide field ">
                 <label>
@@ -773,7 +773,7 @@
 
                 <th rowspan="2" style="text-align: center !important">ลำดับ</th>
                 <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
-                <th rowspan="2" style="text-align: center !important">แบบสอบทานระบบการควบคุมภายใน</th>
+                <th rowspan="2" style="text-align: center !important">แบบสอบถามระบบการควบคุมภายใน</th>
                 <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
 
               </tr>
