--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-10/int08-3-10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-10/int08-3-10.component.html
@@ -1,7 +1,7 @@
 <div class="ui grid">
   <div class="sixteen wide column" *ngIf="!getConditionShow()">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายละเอียดปัจจัยเสี่ยงแบบสอบทานระบบการควบคุมภายใน</span>
+      <span>รายละเอียดปัจจัยเสี่ยงแบบสอบถามระบบการควบคุมภายใน</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
@@ -42,7 +42,7 @@
   </div>
   <div class="sixteen wide column ">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>เพิ่มข้อมูลปัจจัยเสี่ยงแบบสอบทานระบบการควบคุมภายใน</span>
+      <span>เพิ่มข้อมูลปัจจัยเสี่ยงแบบสอบถามระบบการควบคุมภายใน</span>
     </div>
 
     <div class="ui attached segment">
