--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -3,7 +3,7 @@
   <div class="sixteen wide column">
     
     <div class="ui top attached header">
-      <span>แบบสอบทานระบบการควบคุมภายใน</span>
+      <span>แบบสอบถามระบบการควบคุมภายใน</span>
     </div>
 
     <div class="ui bottom attached segment">
@@ -74,7 +74,7 @@
               <tr style="text-align: center !important;">
                 <th>ลำดับ</th>
                 <th>สรรพสามิตภาค/พื้นที่</th>
-                <th>ผู้สร้างแบบสอบทาน</th>
+                <th>ผู้สร้างแบบสอบถาม</th>
                 <th>ปีงบประมาณ</th>
                 <th style="width: 40px">จัดการ</th>
               </tr>
