--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-1/int02-m4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-1/int02-m4-1.component.html
@@ -2,7 +2,7 @@
 <div class="ui grid" style="margin: 2%">
     <div class="sixteen wide column segments">
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>สรุปผลแบบสอบทานระบบการควบคุมภายใน</span>
+            <span>สรุปผลแบบสอบถามระบบการควบคุมภายใน</span>
         </div>
 
         <div class="ui attached segment">
