--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-3/int02-m4-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-3/int02-m4-3.component.html
@@ -1,7 +1,7 @@
 <div class="ui grid" style="margin: 2%">
     <div class="sixteen wide column segments">
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>รายชื่อหน่วยงานที่ส่งแบบสอบทาน</span>
+            <span>รายชื่อหน่วยงานที่ส่งแบบสอบถาม</span>
         </div>
 
         <div class="ui attached segment">
