--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1.component.html
@@ -1,15 +1,14 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">บันทึกผลการตรวจปฏิบัติการ </h2>
-
-    <div class="ui top attached header">
-      <span>จัดการข้อมูลต้นทาง</span>
-    </div>
+ 
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>จัดการข้อมูลต้นทาง</span>
+      </div>
     <div class="ui attached segment">
 
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          <h3>เชื่อมโยงข้อมูลใบขน (ภส.05-01) </h3>
+          <h3>ค้นหาข้อมูลคำขอยกเว้นหรือคืนภาษี (ภส.05-01)" </h3>
         </div>
       </div>
       <br>
