--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -62,7 +62,7 @@
             </button>
             <button type="button" [routerLink]="'/int02/2'" class="ui mini primary button">
               <i class="add icon"></i>
-              สร้าง
+              รายการใหม่
             </button>
           </div>
         </div>
