--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -66,7 +66,7 @@
                 <td class="center" *ngIf="obj.status === undefined">
                   <button *ngIf="obj.hasChild == 'FALSE'" class="ui mini green icon button" type="button" (click)="linkToDetail(obj.qtnReportHdrId)">
                     <i class="plus icon"></i>
-                    สร้าง
+                    รายการใหม่
                   </button>
                   <button *ngIf="obj.hasChild == 'TRUE'" class="ui mini yellow icon button" type="button" (click)="linkToDetail(obj.qtnReportHdrId)">
                     <i class="edit icon"></i>
