--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -145,7 +145,7 @@
             <div class="eight wide column">
                 <button class="ui  primary button" type="button" (click)="clickSearch()">ค้นหา</button>
                 <button class="ui  grey button" type="button" (click)="clickClear()"> ล้างข้อมูล</button>
-                <button class="ui  green button" type="button" (click)="modalAddHead()">สร้าง</button>
+                <button class="ui  green button" type="button" (click)="modalAddHead()">รายการใหม่</button>
             </div>
         </div>
         <br>
