--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
@@ -20,7 +20,7 @@
           </div>
           <button class="ui mini primary button width-100" (click)="changepage()">
             <i class="add icon"></i>
-            สร้าง
+            รายการใหม่
           </button>
         </div>
 
