--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -47,7 +47,7 @@
           </button>
           <button class="ui mini primary button" (click)="createBudgetYear()">
             <i class="add icon"></i>
-            สร้าง
+            รายการใหม่
           </button>
         </div>
       </div>
