--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-1/int06-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-1/int06-1-1.component.html
@@ -43,7 +43,7 @@
                 <div class="ui stackable center aligned page grid">
                     <button class="ui mini yellow button" type="submit"><i class="upload icon"></i> อัปโหลด</button>
                     <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
-                    <button class="ui mini primary button" routerLink="/int06/1/1-2" type="button" [disabled]="show">ถัดไป</button>
+                    <button class="ui mini primary button" routerLink="/int06/1/1-2" type="button" [disabled]="show"><i class="share icon"></i>ถัดไป</button>
                 </div><br>
             </form>
         </div>
