--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
@@ -16,12 +16,13 @@
                         <div class="inline fields">
                             <div class="two wide field">
                                 <label class="full-width text-right">
-                                    เลขที่ใบอนุญาต
+                                    เลขที่ใบเสร็จ C :
                                 </label>
                             </div>
                             <div class="three wide field {{f.submitted && f.controls.permit_no.invalid ? 'error' : ''}}">
                                 <div class="ui input">
-                                    <input type="text" name="permit_no" class="full-width" ngModel required>
+                                    <input type="text" id="keyC" name="permit_no" class="full-width" required
+                                        [(ngModel)]='keyC' (keydown)="keyDownC()">
                                 </div>
                             </div>
                             <div class="two wide field">
@@ -50,6 +51,20 @@
                                 </button>
                             </div>
                         </div>
+                        <div class="inline fields">
+                            <div class="two wide field">
+                                <label class="full-width text-right">
+                                    N :
+                                </label>
+                            </div>
+                            <div class="three wide field {{f.submitted && f.controls.permit_no.invalid ? 'error' : ''}}">
+                                <div class="ui input">
+                                    <input type="text" id="keyN" name="permit_no" class="full-width" ngModel required
+                                        (keydown)="keyDownN()">
+                                </div>
+                            </div>
+
+                        </div>
                     </form>
                 </div>
             </div>
@@ -59,91 +74,80 @@
         <div class="ui {{ (loading | async) ? 'loading' : '' }} top attached segment">
             <div class="ui grid">
                 <div class="sixteen wide column">
-                    <table id="table" class="ui celled nowrap striped selectable table" style="width: 100%;">
+                    <table id="table" class="ui small celled table striped selectable" style="width: 100%;">
                         <thead>
                             <tr class="center aligned">
-                                <th rowspan="2">ลำดับที่</th>
-                                <th rowspan="2">วันที่รับเงิน</th>
-                                <th rowspan="2">วันที่นำฝากบัญชี</th>
-                                <th rowspan="2">สินค้า/บริการ</th>
-                                <th rowspan="2">รหัส</th>
-                                <th rowspan="2">เลขแบบพิมพ์</th>
-                                <th colspan="2">เลขใบเสร็จ </th>
-                                <th rowspan="2">จำนวนเงิน</th>
-                                <th rowspan="2">จำนวนเงิน(กรอก)</th>
-                                <th rowspan="2">นำส่งมหาดไทย
-                                    <br />10% / 98.5%</th>
-                                <th rowspan="2">มหาดไทย
-                                    <br />95% / 1.5%</th>
-                                <th rowspan="2">เงินฝาก/ค่าใช้จ่าย
-                                    <br />5% </th>
-                                <th rowspan="2">รวม</th>
-                                <th rowspan="2">ชดเชยกรมศุลฯ
-                                    <br />0.75%</th>
-                                <th rowspan="2">ค่าพิมพ์แสตมป์
-                                    <br />1%</th>
-                                <th rowspan="2">นำส่ง</th>
-                                <!-- <th rowspan="2">Action</th> -->
+                                <th>ลำดับที่</th>
+                                <th>วันที่จัดเก็บรายได้</th>
+                                <th>วันที่นำฝากบัญชีพัก</th>
+                                <th>วันที่นำเงินฝากคลัง</th>
+                                <th>สินค้า/บริการ</th>
+                                <th>เลขแบบพิมพ์</th>
+                                <th>เลขใบเสร็จ </th>
+                                <th>จำนวนเงินจากระบบ</th>
+                                <th>จำนวนเงินจากสำเนาใบเสร็จ</th>
+                                <th>มหาดไทย 10%</th>
+                                <th>มหาดไทย 95%</th>
+                                <th>เงินฝาก/ค่าใช้จ่าย 5%</th>
+                                <th>ผู้สูงอายุ 1%</th>
+                                <th>รวม</th>
+                                <th>จำนวนเงินนำส่งคลัง</th>
+                                <th>ชดเชยกรมศุลฯ 0.75%</th>
+                                <th>ค่าพิมพ์แสตมป์ 1%</th>
                             </tr>
-                            <tr class="center aligned">
-                                <th>ชนิด</th>
-                                <th>ลำดับ</th>
-                            </tr>
+
                         </thead>
                         <tbody>
-                            <tr class="text-center {{ data.status == 'diff' ? 'red' : '' }}" *ngFor="let data of taxReceipt | async; let i=index">
-                                <td>{{ i + 1}}</td>
-                                <td>{{ data.receiptDate ? dateFormat(data.receiptDate) : '-' }}</td>
-                                <td>{{ data.depositDate ? dateFormat(data.depositDate) : '-' }}</td>
-                                <td>{{ data.incomeName ? data.incomeName : '-' }}</td>
-                                <td>{{ data.taxReceiptId ? data.taxReceiptId : '-' }}</td>
-                                <td>{{ data.taxPrintNo && data.taxPrintNo != null ? data.taxPrintNo : '-' }}</td>
-                                <td class="can-click" data-tooltip="คัดลอก" data-position="left center" (click)="selectValue(data.receiptNo)">{{ data.receiptNo ? data.receiptNo.split("/")[0] : '-' }}</td>
-                                <td class="can-click" data-tooltip="คัดลอก" data-position="right center" (click)="selectValue(data.receiptNo)">{{ data.receiptNo ? data.receiptNo.split("/")[1] : '-' }}</td>
-                                <td class="text-right">{{ round(data.netTaxAmount || 0.0) }}</td>
-                                <td class="text-right">{{ round(data.checkedAmount || 0.0) }}</td>
+                            <tr class="text-center" *ngFor="let data of taxReceipt | async; let i=index">
+                                <td class="text-center">{{ i + 1}}</td>
+                                <td class="text-center">{{ data.receiptDate ? dateFormat(data.receiptDate) : '-' }}</td>
+                                <td class="text-center">{{ data.depositDate ? dateFormat(data.depositDate) : '-' }}</td>
+                                <td class="text-center">{{ data.sendDate ? data.sendDate : '-' }}</td>
+                                <td class="text-left">{{ data.incomeName ? data.incomeName : '-' }}</td>
+                                <td class="text-center">{{ data.taxPrintNo && data.taxPrintNo != null ? data.taxPrintNo
+                                    : '-' }}</td>
+                                <td class="text-center {{ data.portal != '' ? 'red' : '' }}" data-position="left center">{{
+                                    data.receiptNo
+                                    ? data.receiptNo :
+                                    '-' }}</td>
+
+                                <td class="text-right {{ data.status == 'diff' ? 'red' : '' }}">{{round(data.netTaxAmount
+                                    || 0.0) }}</td>
+                                <td class="text-right {{ data.status == 'diff' ? 'red' : '' }}">{{round(data.checkedAmount
+                                    || 0.0) }}</td>
                                 <td class="text-right">{{ round(data.netLocAmount || 0.0) }}</td>
                                 <td class="text-right">{{ round(data.locOthAmount || 0.0) }}</td>
                                 <td class="text-right">{{ round(data.locExpAmount || 0.0) }}</td>
+                                <td class="text-right">{{ round(data.olderFundAmount || 0.0) }}</td>
                                 <td class="text-right">{{ round(data.sumAmount || 0.0) }}</td>
+                                <td class="text-right">{{ round(data.sendAmount || 0.0) }}</td>
                                 <td class="text-right">{{ round(data.customAmount || 0.0) }}</td>
                                 <td class="text-right">{{ round(data.stampAmount || 0.0) }}</td>
-                                <td class="text-right">{{ round(data.sendAmount || 0.0) }}</td>
-                                <!-- <td style="text-align: center;">
-                                    <button class="ui mini icon button" *ngIf="data.taxPrintNo" type="button" (click)="edit(i)">
-                                        <i class="ui edit icon"></i>
-                                    </button>
-                                    <button class="ui mini icon button" *ngIf="data.taxPrintNo" type="button" (click)="del(i)">
-                                        <i class="ui trash icon"></i>
-                                    </button>
-                                    <p *ngIf="!data.taxPrintNo">-</p>
-                                </td> -->
+
                             </tr>
                         </tbody>
                         <tfoot>
                             <tr class="text-right">
-                                <th rowspan="2">&nbsp;</th>
-                                <th rowspan="2">&nbsp;</th>
-                                <th rowspan="2">&nbsp;</th>
-                                <th rowspan="2">&nbsp;</th>
-                                <th rowspan="2">&nbsp;</th>
-                                <th rowspan="2">&nbsp;</th>
-                                <th colspan="2">รวม</th>
-                                <th rowspan="2">{{ round(totalReceipt.netTaxAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.checkedAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.netLocAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.locOthAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.locExpAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.netLocAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.customAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.stampAmount || 0.0) }}</th>
-                                <th rowspan="2">{{ round(totalReceipt.sendAmount || 0.0) }}</th>
                                 <!-- <th rowspan="2">&nbsp;</th> -->
+                                <th>&nbsp;</th>
+                                <th>&nbsp;</th>
+                                <th>&nbsp;</th>
+                                <th>&nbsp;</th>
+                                <th>&nbsp;</th>
+                                <th>&nbsp;</th>
+                                <th>รวม</th>
+                                <th>{{ round(totalReceipt.netTaxAmount || 0.0) }}</th>
+                                <th>{{ round(totalReceipt.checkedAmount || 0.0) }}</th>
+                                <th>{{ round(totalReceipt.netLocAmount || 0.0) }}</th>
+                                <th>{{ round(totalReceipt.locOthAmount || 0.0) }}</th>
+                                <th>{{ round(totalReceipt.locExpAmount || 0.0) }}</th>
+                                <th>&nbsp;</th>
+                                <th>{{ round(totalReceipt.sum || 0.0) }}</th>
+                                <th>{{ round(totalReceipt.sendAmount || 0.0) }}</th>
+                                <th>{{ round(totalReceipt.customAmount || 0.0) }}</th>
+                                <th>{{ round(totalReceipt.stampAmount || 0.0) }}</th>
                             </tr>
-                            <tr style="display: none;">
-                                <th>A</th>
-                                <th>B</th>
-                            </tr>
+
                         </tfoot>
                     </table>
                 </div>
@@ -155,7 +159,8 @@
                         <i class="save icon"></i>บันทึก
                     </button>
                     <button class="ui mini primary button widtd-100">
-                        <i class="print icon"></i>ส่งออก <!-- export -->
+                        <i class="print icon"></i>ส่งออก
+                        <!-- export -->
                     </button>
                     <a class="ui mini primary button widtd-100" routerLink='/int01/1/3'>
                         <i class="file alternate outline icon"></i>ตรวจสอบงบสรุปยอดภาษี
