--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-1/int05-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-1/int05-1-1-1.component.html
@@ -265,7 +265,7 @@
       <thead>
         <tr style="text-align: center;">        
           <th rowspan="2">ลำดับ</th>
-          <th rowspan="2">วันที่ การรับ-จ่าย</th>
+          <th rowspan="2">วันที่ รับ - จ่าย</th>
           <th rowspan="2">สถานะ การรับ-จ่าย</th>
           <th rowspan="2">หน่วยงาน/ผู้ประกอบการที่รับ-จ่ายแสตมป์</th>
           <th colspan="2">หนังสือขอเบิกแสตมป์</th>
